Implementar a alocação de veículos

--- a/app/src/main/res/layout/fragment_veiculo_lista.xml
+++ b/app/src/main/res/layout/fragment_veiculo_lista.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_search"
-        android:queryHint="Pesquise pela placa do carro" />
+        android:queryHint="Pesquise pela placa" />
 
     <LinearLayout
         android:layout_width="match_parent"
