--- a/app/src/main/res/menu/activity_roteirista_main_drawer.xml
+++ b/app/src/main/res/menu/activity_roteirista_main_drawer.xml
@@ -18,6 +18,11 @@
             android:id="@+id/nav_coletas"
             android:icon="@drawable/ic_near_me_24dp"
             android:title="@string/coletas" />
+
+        <item
+            android:id="@+id/nav_veiculos"
+            android:icon="@drawable/ic_local_shipping_24dp"
+            android:title="@string/veiculos" />
     </group>
 
     <group
