--- a/app/src/main/res/navigation/mobile_navigation_roteirista.xml
+++ b/app/src/main/res/navigation/mobile_navigation_roteirista.xml
@@ -24,6 +24,12 @@
         tools:layout="@layout/fragment_roteirista_coletas" />
 
     <fragment
+        android:id="@+id/nav_veiculos"
+        android:name="com.gutotech.tcclogistica.view.roteirista.ui.veiculo.RoteiristaVeiculosFragment"
+        android:label="@string/veiculos"
+        tools:layout="@layout/fragment_roteirista_veiculos" />
+
+    <fragment
         android:id="@+id/nav_meus_dados"
         android:name="com.gutotech.tcclogistica.view.PerfilFragment"
         android:label="@string/meus_dados"
