Melhorar interfaces e consertar bugs

--- a/app/src/main/res/layout/adapter_entrega_pendente.xml
+++ b/app/src/main/res/layout/adapter_entrega_pendente.xml
@@ -1,63 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
+    android:layout_margin="5dp"
+    android:layout_marginBottom="3dp"
     android:background="@android:color/white"
-    android:orientation="horizontal"
-    android:padding="16dp">
+    app:cardCornerRadius="5dp">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:padding="16dp">
 
-        <TextView
-            android:id="@+id/destinatarioTextView"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/destinatario"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/enderecoTextView"
-            android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/destinatarioTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="@string/destinatario"
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/enderecoTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="@string/endereco"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/numeroNotaTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="@string/nota"
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dataEntregaTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/data_entrega"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/horaTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/hora_entrega"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/finalizarButton"
+            style="@style/ButtonTheme"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/endereco"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/numeroNotaTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/nota"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/dataEntregaTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/data_entrega"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
+            android:layout_gravity="center"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
+            android:text="@string/finalizar" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/finalizarButton"
-        style="@style/ButtonTheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="3dp"
-        android:layout_marginLeft="3dp"
-        android:text="@string/finalizar" />
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
