--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3F51B5</color>
     <color name="colorAccent">#03A9F4</color>
 
-    <color name="colorBackground">#F1F1EE</color>
+    <color name="colorBackground">#F5F4F4</color>
 
     <color name="colorGreen">#1BD824</color>
 </resources>
