--- a/app/src/main/res/layout/adapter_coleta_pendente.xml
+++ b/app/src/main/res/layout/adapter_coleta_pendente.xml
@@ -1,121 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:background="@android:color/white"
-    android:orientation="horizontal"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:layout_margin="5dp"
+    android:layout_marginBottom="3dp"
+    app:cardCornerRadius="5dp">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/motoristaTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/motorista"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/numeroTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/numero"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/remetenteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/remetente"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/enderecoRemetenteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/endereco"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/destinatarioTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/destinatario"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/enderecoDestinatarioTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/endereco"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:padding="@dimen/activity_horizontal_margin">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/dataTextView"
-                android:layout_width="wrap_content"
+                android:id="@+id/numeroTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Data"
+                android:text="@string/numero"
                 android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:textStyle="bold" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/remetenteTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text=" até às "
+                android:text="@string/remetente"
                 android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/horaTextView"
-                android:layout_width="wrap_content"
+                android:id="@+id/enderecoRemetenteTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Hora"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:text="@string/endereco"
+                android:textColor="@android:color/black" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/destinatarioTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text=" hrs"
+                android:text="@string/destinatario"
                 android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/enderecoDestinatarioTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="@string/endereco"
+                android:textColor="@android:color/black" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/dataTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Data"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" até às "
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/horaTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hora"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" hrs"
+                    android:textColor="@android:color/black" />
+            </LinearLayout>
         </LinearLayout>
+
+        <Button
+            android:id="@+id/finalizarButton"
+            style="@style/ButtonTheme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
+            android:text="@string/finalizar" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/finalizarButton"
-        style="@style/ButtonTheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="3dp"
-        android:layout_marginLeft="3dp"
-        android:text="@string/finalizar" />
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
