--- a/app/src/main/res/layout/adapter_motorista_veiculo.xml
+++ b/app/src/main/res/layout/adapter_motorista_veiculo.xml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
-    android:background="@android:color/white"
-    android:orientation="horizontal"
-    android:padding="8dp">
+    android:layout_marginBottom="3dp"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/motoristaTextView"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_weight="1"
-        android:text="@string/motorista"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:layout_margin="5dp"
+        app:cardCornerRadius="5dp">
 
-    <TextView
-        android:id="@+id/veiculoTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/veiculo"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/motoristaTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/motorista"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/veiculoTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="@string/veiculo"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
