--- a/app/src/main/res/layout/fragment_adm_notas.xml
+++ b/app/src/main/res/layout/fragment_adm_notas.xml
@@ -22,6 +22,12 @@
         android:layout_height="wrap_content"
         android:gravity="end" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/statusNotasTextView"
         android:layout_width="match_parent"
