--- a/app/src/main/res/layout/fragment_motorista_entregas_finalizadas.xml
+++ b/app/src/main/res/layout/fragment_motorista_entregas_finalizadas.xml
@@ -75,6 +75,12 @@
         android:layout_marginTop="8dp"
         android:gravity="end" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/statusTextView"
         android:layout_width="match_parent"
