--- a/app/src/main/res/layout/fragment_motorista_entregas_pendentes.xml
+++ b/app/src/main/res/layout/fragment_motorista_entregas_pendentes.xml
@@ -54,6 +54,12 @@
         android:gravity="end"
         android:text="Total: 0" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/statusTextView"
         android:layout_width="match_parent"
