--- a/app/src/main/res/layout/fragment_roteirista_coleta_nova.xml
+++ b/app/src/main/res/layout/fragment_roteirista_coleta_nova.xml
@@ -18,11 +18,13 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             app:cardCornerRadius="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
                 android:orientation="vertical"
                 android:padding="16dp">
 
