--- a/app/src/main/res/layout/fragment_roteirista_entregas_lista.xml
+++ b/app/src/main/res/layout/fragment_roteirista_entregas_lista.xml
@@ -44,6 +44,12 @@
         android:layout_marginBottom="5dp"
         android:gravity="end" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/statusPesquisaTextView"
         android:layout_width="match_parent"
