--- a/app/src/main/res/layout/fragment_suporte.xml
+++ b/app/src/main/res/layout/fragment_suporte.xml
@@ -9,9 +9,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         app:cardBackgroundColor="@android:color/white"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="8dp">
+        app:cardCornerRadius="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,7 +43,6 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/enviar_feedback" />
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
