--- a/app/src/main/res/layout/fragment_veiculo_novo.xml
+++ b/app/src/main/res/layout/fragment_veiculo_novo.xml
@@ -30,14 +30,16 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/modeloTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/placa"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/modelo"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
 
                     <EditText
-                        android:id="@+id/placaEditText"
+                        android:id="@+id/modeloEditText"
                         style="@style/EditTextTheme"
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
@@ -45,7 +47,7 @@
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
                         android:ems="10"
-                        android:inputType="textCapCharacters" />
+                        android:inputType="textCapWords|textCapSentences" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -67,16 +69,15 @@
                         android:inputType="textCapWords|textCapSentences" />
 
                     <TextView
-                        android:id="@+id/modeloTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="24dp"
-                        android:text="@string/modelo"
+                        android:text="@string/placa"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
 
                     <EditText
-                        android:id="@+id/modeloEditText"
+                        android:id="@+id/placaEditText"
                         style="@style/EditTextTheme"
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
@@ -84,7 +85,7 @@
                         android:layout_marginEnd="16dp"
                         android:layout_marginRight="16dp"
                         android:ems="10"
-                        android:inputType="textCapWords|textCapSentences" />
+                        android:inputType="textCapCharacters" />
 
                     <TextView
                         android:layout_width="wrap_content"
