--- a/app/src/main/res/layout/fragment_veiculos_motoristas_lista.xml
+++ b/app/src/main/res/layout/fragment_veiculos_motoristas_lista.xml
@@ -7,6 +7,12 @@
     android:padding="16dp"
     tools:context=".view.roteirista.ui.veiculo.VeiculosMotoristasListaFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/statusTextView"
         android:layout_width="match_parent"
